@@ -26,10 +26,9 @@
 
 package jdk.internal.foreign;
 
-import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.SegmentScope;
-import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment.Scope;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.lang.ref.Cleaner;
@@ -51,7 +50,7 @@ import jdk.internal.vm.annotation.ForceInline;
  * access is possible when a session is being closed (see {@link jdk.internal.misc.ScopedMemoryAccess}).
  */
 public abstract sealed class MemorySessionImpl
-        implements SegmentScope, SegmentAllocator
+        implements Scope
         permits ConfinedSession, GlobalSession, SharedSession {
     static final int OPEN = 0;
     static final int CLOSING = -1;
@@ -60,7 +59,8 @@ public abstract sealed class MemorySessionImpl
     static final VarHandle STATE;
     static final int MAX_FORKS = Integer.MAX_VALUE;
 
-    public static final MemorySessionImpl GLOBAL = new GlobalSession(null);
+    public static final MemorySessionImpl GLOBAL = new GlobalSession(null, false);
+    public static final MemorySessionImpl NATIVE = new GlobalSession(null, true);
 
     static final ScopedMemoryAccess.ScopedAccessError ALREADY_CLOSED = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::alreadyClosed);
     static final ScopedMemoryAccess.ScopedAccessError WRONG_THREAD = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::wrongThread);
@@ -77,25 +77,41 @@ public abstract sealed class MemorySessionImpl
         }
     }
 
+    class SessionArena implements Arena {
+        private final MemorySessionImpl sessionImpl;
+
+        SessionArena(MemorySessionImpl sessionImpl) {
+            this.sessionImpl = sessionImpl;
+        }
+
+        @Override
+        public Scope scope() {
+            return sessionImpl;
+        }
+
+        @Override
+        public void close() {
+            sessionImpl.close();
+        }
+    }
+
     public Arena asArena() {
-        return new Arena() {
-            @Override
-            public SegmentScope scope() {
-                return MemorySessionImpl.this;
-            }
+        return new SessionArena(this);
+    }
 
-            @Override
-            public void close() {
-                MemorySessionImpl.this.close();
-            }
+    @ForceInline
+    public static final MemorySessionImpl toMemorySession(Arena arena) {
+        if (arena instanceof SessionArena arenaImpl) {
+            return arenaImpl.sessionImpl;
+        } else {
+            return (MemorySessionImpl) arena.scope();
+        }
+    }
 
-            @Override
-            public boolean isCloseableBy(Thread thread) {
-                Objects.requireNonNull(thread);
-                return ownerThread() == null || // shared
-                        ownerThread() == thread;
-            }
-        };
+    public final boolean isCloseableBy(Thread thread) {
+        Objects.requireNonNull(thread);
+        return isCloseable() &&
+                (owner == null || owner == thread);
     }
 
     public void addCloseAction(Runnable runnable) {
@@ -150,7 +166,6 @@ public abstract sealed class MemorySessionImpl
         return new ImplicitSession(cleaner);
     }
 
-    @Override
     public MemorySegment allocate(long byteSize, long byteAlignment) {
         Utils.checkAllocationSizeAndAlign(byteSize, byteAlignment);
         return NativeMemorySegmentImpl.makeNativeSegment(byteSize, byteAlignment, this);
@@ -160,7 +175,6 @@ public abstract sealed class MemorySessionImpl
 
     public abstract void acquire0();
 
-    @Override
     public void whileAlive(Runnable action) {
         Objects.requireNonNull(action);
         acquire0();
@@ -175,12 +189,6 @@ public abstract sealed class MemorySessionImpl
         return owner;
     }
 
-    public static boolean sameOwnerThread(SegmentScope scope1, SegmentScope scope2) {
-        return ((MemorySessionImpl) scope1).ownerThread() ==
-                ((MemorySessionImpl) scope2).ownerThread();
-    }
-
-    @Override
     public final boolean isAccessibleBy(Thread thread) {
         Objects.requireNonNull(thread);
         return owner == null || owner == thread;
@@ -225,6 +233,10 @@ public abstract sealed class MemorySessionImpl
         }
     }
 
+    public static final void checkValidState(MemorySegment segment) {
+        ((AbstractMemorySegmentImpl)segment).sessionImpl().checkValidState();
+    }
+
     @Override
     protected Object clone() throws CloneNotSupportedException {
         throw new CloneNotSupportedException();
@@ -247,7 +259,7 @@ public abstract sealed class MemorySessionImpl
     abstract void justClose();
 
     public static MemorySessionImpl heapSession(Object ref) {
-        return new GlobalSession(ref);
+        return new GlobalSession(ref, true);
     }
 
     /**
